==> eugenscobich/bees-scale/lib/RF24/RF24.cpp <==
#include "nRF24L01old.h"
#include "RF24_config.h"
#include "RF24.h"

void RF24::csn(bool level)
{
    HAL_GPIO_WritePin(nrf_csn_GPIOx, nrf_csn_GPIO_Pin, level ? GPIO_PIN_SET : GPIO_PIN_RESET);
    HAL_Delay(1);
}

void RF24::ce(bool level)
{
    HAL_GPIO_WritePin(nrf_ce_GPIOx, nrf_ce_GPIO_Pin, level ? GPIO_PIN_SET : GPIO_PIN_RESET);
}

void RF24::read_register(uint8_t reg, uint8_t* buf, uint8_t len)
{
    uint8_t command = R_REGISTER | reg;

    beginTransaction();
    HAL_StatusTypeDef _status = HAL_SPI_Transmit(hspi, &command, 1, 2000);
    handleSpiStatus(_status, 1);
    
    while (len--) {
        _status = HAL_SPI_Receive(hspi, buf++, 1, 2000);
        handleSpiStatus(_status, 2);
    }
    endTransaction();
}

uint8_t RF24::read_register(uint8_t reg)
{
    uint8_t command = R_REGISTER | reg;
    uint8_t result;

    beginTransaction();
    HAL_StatusTypeDef _status = HAL_SPI_TransmitReceive(hspi, &command, &status, 1, 2000);
    handleSpiStatus(_status, 3);

    _status = HAL_SPI_Receive(hspi, &result, 1, 2000);
    handleSpiStatus(_status, 4);
   
    endTransaction();
    return result;
}

void RF24::write_register(uint8_t reg, const uint8_t* buf, uint8_t len)
{
    uint8_t command = W_REGISTER | reg;

    beginTransaction();
    HAL_StatusTypeDef _status = HAL_SPI_TransmitReceive(hspi, &command, &status, 1, 2000);
    handleSpiStatus(_status, 5);
    while (len--) {
        uint8_t pData = *buf++;
        _status = HAL_SPI_Transmit(hspi, &pData, 1, 2000);
        handleSpiStatus(_status, 6);
    }
   
    endTransaction();
}

void RF24::write_register(uint8_t reg, uint8_t value, bool is_cmd_only)
{
    uint8_t command = W_REGISTER | reg;
    beginTransaction();
    HAL_StatusTypeDef _status = HAL_SPI_TransmitReceive(hspi, &command, &status, 1, 2000);
    handleSpiStatus(_status, 7);

    if (!is_cmd_only) {
        _status = HAL_SPI_Transmit(hspi, &value, 1, 2000);
        handleSpiStatus(_status, 8);
    }
    endTransaction();
}

void RF24::write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
    const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

    uint8_t blank_len = !data_len ? 1 : 0;
    if (!dynamic_payloads_enabled) {
        data_len = rf24_min(data_len, payload_size);
        blank_len = static_cast<uint8_t>(payload_size - data_len);
    }
    else {
        data_len = rf24_min(data_len, static_cast<uint8_t>(32));
    }


    beginTransaction();
    uint8_t command = writeType;
    HAL_StatusTypeDef _status = HAL_SPI_TransmitReceive(hspi, &command, &status, 1, 2000);
    handleSpiStatus(_status, 9);

    while (data_len--) {
        uint8_t pData = *current++;
        _status = HAL_SPI_Transmit(hspi, &pData, 1, 2000);
        handleSpiStatus(_status, 10);
    }

    while (blank_len--) {
        _status = HAL_SPI_Transmit(hspi, 0x00, 1, 2000);
        handleSpiStatus(_status, 11);
    }    
    endTransaction();

}

void RF24::read_payload(void* buf, uint8_t data_len)
{
    uint8_t* current = reinterpret_cast<uint8_t*>(buf);

    uint8_t blank_len = 0;
    if (!dynamic_payloads_enabled) {
        data_len = rf24_min(data_len, payload_size);
        blank_len = static_cast<uint8_t>(payload_size - data_len);
    }
    else {
        data_len = rf24_min(data_len, static_cast<uint8_t>(32));
    }

    beginTransaction();
    uint8_t command = R_RX_PAYLOAD;
    HAL_StatusTypeDef _status = HAL_SPI_TransmitReceive(hspi, &command, &status, 1, 2000);
    handleSpiStatus(_status, 12);

    while (data_len--) {
        _status = HAL_SPI_Receive(hspi, current++, 1, 2000);
        handleSpiStatus(_status, 13);
    }
    
    uint8_t temp = 0;
    while (blank_len--) {
        _status = HAL_SPI_Receive(hspi, &temp, 1, 2000);
        handleSpiStatus(_status, 14);
    }
   
    endTransaction();
}

bool RF24::begin(SPI_HandleTypeDef* _hspi, GPIO_TypeDef* _nrf_ce_GPIOx, uint16_t _nrf_ce_GPIO_Pin, GPIO_TypeDef* _nrf_csn_GPIOx, uint16_t _nrf_csn_GPIO_Pin)
{
    hspi = hspi;
    nrf_ce_GPIOx = _nrf_ce_GPIOx;
    nrf_ce_GPIO_Pin = _nrf_ce_GPIO_Pin;
    nrf_csn_GPIOx = _nrf_csn_GPIOx;
    nrf_csn_GPIO_Pin = _nrf_csn_GPIO_Pin;
    return begin();
}

bool RF24::begin(void)
{
    return _init_radio();
}

bool RF24::_init_radio()
{
    // Must allow the radio time to settle else configuration bits will not necessarily stick.
    // This is actually only required following power up but some settling time also appears to
    // be required after resets too. For full coverage, we'll always assume the worst.
    // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
    // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
    // WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
    HAL_Delay(5);

    // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
    // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
    // sizes must never be used. See datasheet for a more complete explanation.
    setRetries(5, 15);

    // Then set the data rate to the slowest (and most reliable) speed supported by all hardware.
    setDataRate(RF24_1MBPS);

    // detect if is a plus variant & use old toggle features command accordingly
    uint8_t before_toggle = read_register(FEATURE);
    toggle_features();
    uint8_t after_toggle = read_register(FEATURE);
    _is_p_variant = before_toggle == after_toggle;
    if (after_toggle) {
        if (_is_p_variant) {
            // module did not experience power-on-reset (#401)
            toggle_features();
        }
        // allow use of multicast parameter and dynamic payloads by default
        write_register(FEATURE, 0);
    }
    ack_payloads_enabled = false; // ack payloads disabled by default
    write_register(DYNPD, 0);     // disable dynamic payloads by default (for all pipes)
    dynamic_payloads_enabled = false;
    write_register(EN_AA, 0x3F);  // enable auto-ack on all pipes
    write_register(EN_RXADDR, 3); // only open RX pipes 0 & 1
    setPayloadSize(32);           // set static payload size to 32 (max) bytes by default
    setAddressWidth(5);           // set default address length to (max) 5 bytes

    // Set up default configuration.  Callers can always change it later.
    // This channel should be universally safe and not bleed over into adjacent
    // spectrum.
    setChannel(76);

    // Reset current status
    // Notice reset and flush is the last thing we do
    write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));

    // Flush buffers
    flush_rx();
    flush_tx();

    // Clear CONFIG register:
    //      Reflect all IRQ events on IRQ pin
    //      Enable PTX
    //      Power Up
    //      16-bit CRC (CRC required by auto-ack)
    // Do not write CE high so radio will remain in standby I mode
    // PTX should use only 22uA of power
    write_register(NRF_CONFIG, (_BV(EN_CRC) | _BV(CRCO)));
    config_reg = read_register(NRF_CONFIG);

    powerUp();

    // if config is not set correctly then there was a bad response from module
    return config_reg == (_BV(EN_CRC) | _BV(CRCO) | _BV(PWR_UP)) ? true : false;
}

bool RF24::isValid()
{
    return nrf_ce_GPIO_Pin != RF24_PIN_INVALID && nrf_csn_GPIO_Pin != RF24_PIN_INVALID;
}

void RF24::stopListening(void)
{
    ce(0);
    
    HAL_Delay(1);
    if (ack_payloads_enabled) {
        flush_tx();
    }

    config_reg = static_cast<uint8_t>(config_reg & ~_BV(PRIM_RX));
    write_register(NRF_CONFIG, config_reg);
    write_register(EN_RXADDR, static_cast<uint8_t>(read_register(EN_RXADDR) | _BV(pgm_read_byte(&child_pipe_enable[0])))); // Enable RX on pipe0
}

void RF24::powerUp(void)
{
    // if not powered up then power up and wait for the radio to initialize
    if (!(config_reg & _BV(PWR_UP))) {
        config_reg |= _BV(PWR_UP);
        write_register(NRF_CONFIG, config_reg);

        // For nRF24L01+ to go from power down mode to TX or RX mode it must first pass through stand-by mode.
        // There must be a delay of Tpd2stby (see Table 16.) after the nRF24L01+ leaves power down mode before
        // the CEis set high. - Tpd2stby can be up to 5ms per the 1.0 datasheet
        HAL_Delay(RF24_POWERUP_DELAY);
    }
}

bool RF24::startWrite(const void* buf, uint8_t len, const bool multicast)
{

    // Send the payload
    write_payload(buf, len, multicast ? W_TX_PAYLOAD_NO_ACK : W_TX_PAYLOAD);
    ce(1);
    HAL_Delay(1);
    ce(0);
    return !(status & _BV(TX_FULL));
}
