==> mikaelnet/pico-experiments/RF24.cpp <==
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.hpp"
#include <string.h>
#define LOW 0
#define HIGH 1
#define _BV(x) (1 << (x))

void RF24::csn(bool mode)
{
    gpio_put(_cs_pin, mode);
    sleep_us(_csDelay);
}

void RF24::ce(bool level)
{
    gpio_put(_ce_pin, level);
}

bool RF24::begin(void)
{
    spi_init(_spi_port, _spi_speed);
    gpio_set_function(_clk_pin, GPIO_FUNC_SPI);
    gpio_set_function(_mosi_pin, GPIO_FUNC_SPI);
    gpio_set_function(_miso_pin, GPIO_FUNC_SPI);
    bi_decl(bi_3pins_with_func(_mosi_pin, _miso_pin, _clk_pin, GPIO_FUNC_SPI));
    spi_set_format(_spi_port, 8, SPI_CPOL_0, SPI_CPHA_0, SPI_MSB_FIRST);

    return _init_pins() && _init_radio();
}

void RF24::read_register(uint8_t reg, uint8_t* buf, uint8_t len)
{
    beginTransaction(); //configures the spi settings for RPi, locks mutex and setting csn low
    uint8_t *prx = spi_rxbuff;
    uint8_t *ptx = spi_txbuff;
    uint8_t size = len + 1;

    *ptx++ = (R_REGISTER | reg);
    while (len--) { 
        *ptx++ = RF24_NOP;  // Dummy operation, just for reading
    }

    spi_write_read_blocking(_spi_port, spi_txbuff, spi_rxbuff, size);
    status = *prx++; // status is 1st byte of receive buffer

    // decrement before to skip status byte
    while (--size) { 
        *buf++ = *prx++; 
    }

    endTransaction(); // unlocks mutex and setting csn high
}

uint8_t RF24::read_register(uint8_t reg)
{
    uint8_t result;

    beginTransaction();

    uint8_t *prx = spi_rxbuff;
    uint8_t *ptx = spi_txbuff;
    *ptx++ = (R_REGISTER | reg);
    *ptx++ = RF24_NOP ; // Dummy operation, just for reading

    spi_write_read_blocking(_spi_port, spi_txbuff, spi_rxbuff, 2);

    status = *prx;     // status is 1st byte of receive buffer
    result = *++prx;   // result is 2nd byte of receive buffer

    endTransaction();

    return result;
}

void RF24::write_register(uint8_t reg, const uint8_t* buf, uint8_t len)
{
    beginTransaction();
    uint8_t *prx = spi_rxbuff;
    uint8_t *ptx = spi_txbuff;
    uint8_t size = len + 1; // Add register value to transmit buffer

    *ptx++ = (W_REGISTER | (REGISTER_MASK & reg));
    while (len--) { 
        *ptx++ = *buf++; 
    }

    spi_write_read_blocking(_spi_port, spi_txbuff, spi_rxbuff, size);

    status = *prx; // status is 1st byte of receive buffer
    endTransaction();
}

void RF24::write_register(uint8_t reg, uint8_t value, bool is_cmd_only)
{
    beginTransaction();
    uint8_t *prx = spi_rxbuff;
    uint8_t *ptx = spi_txbuff;
    *ptx++ = (W_REGISTER | reg);
    *ptx = value;

    spi_write_read_blocking(_spi_port, spi_txbuff, spi_rxbuff, is_cmd_only ? 1 : 2);

    status = *prx++; // status is 1st byte of receive buffer
    endTransaction();
}

void RF24::write_payload(const void* buf, uint8_t data_len, const uint8_t writeType)
{
    const uint8_t* current = reinterpret_cast<const uint8_t*>(buf);

    uint8_t blank_len = !data_len ? 1 : 0;
    if (!dynamic_payloads_enabled) {
        data_len = rf24_min(data_len, payload_size);
        blank_len = payload_size - data_len;
    }
    else {
        data_len = rf24_min(data_len, 32);
    }

    beginTransaction();
    uint8_t *prx = spi_rxbuff;
    uint8_t *ptx = spi_txbuff;
    uint8_t size;
    size = data_len + blank_len + 1; // Add register value to transmit buffer

    *ptx++ =  writeType;
    while (data_len--) { 
        *ptx++ = *current++; 
    }
    while (blank_len--) { 
        *ptx++ = 0; 
    }

    spi_write_read_blocking(_spi_port, spi_txbuff, spi_rxbuff, size);

    status = *prx; // status is 1st byte of receive buffer
    endTransaction();
}

void RF24::read_payload(void* buf, uint8_t data_len)
{
    uint8_t* current = reinterpret_cast<uint8_t*>(buf);

    uint8_t blank_len = 0;
    if (!dynamic_payloads_enabled) {
        data_len = rf24_min(data_len, payload_size);
        blank_len = payload_size - data_len;
    }
    else {
        data_len = rf24_min(data_len, 32);
    }

    beginTransaction();
    uint8_t * prx = spi_rxbuff;
    uint8_t * ptx = spi_txbuff;
    uint8_t size;
    size = data_len + blank_len + 1; // Add register value to transmit buffer

    *ptx++ =  R_RX_PAYLOAD;
    while(--size) { 
        *ptx++ = RF24_NOP; 
    }

    size = data_len + blank_len + 1; // Size has been lost during while, re affect

    spi_write_read_blocking(_spi_port, spi_txbuff, spi_rxbuff, size);
    status = *prx++; // 1st byte is status

    if (data_len > 0) {
        // Decrement before to skip 1st status byte
        while (--data_len) { 
            *current++ = *prx++; 
        }

        *current = *prx;
    }
    endTransaction();
}

bool RF24::_init_radio()
{
    // Must allow the radio time to settle else configuration bits will not necessarily stick.
    // This is actually only required following power up but some settling time also appears to
    // be required after resets too. For full coverage, we'll always assume the worst.
    // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
    // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
    // WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
    sleep_ms(5);

    // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
    // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
    // sizes must never be used. See datasheet for a more complete explanation.
    setRetries(5, 15);

    // Then set the data rate to the slowest (and most reliable) speed supported by all
    // hardware. Since this value occupies the same register as the PA level value, set
    // the PA level to MAX
    setRadiation(RF24_PA_MAX, RF24_1MBPS); // LNA enabled by default

    // detect if is a plus variant & use old toggle features command accordingly
    uint8_t before_toggle = read_register(FEATURE);
    toggle_features();
    uint8_t after_toggle = read_register(FEATURE);
    _is_p_variant = before_toggle == after_toggle;
    if (after_toggle){
        if (_is_p_variant){
            // module did not experience power-on-reset (#401)
            toggle_features();
        }
        // allow use of multicast parameter and dynamic payloads by default
        write_register(FEATURE, 0);
    }
    ack_payloads_enabled = false;     // ack payloads disabled by default
    write_register(DYNPD, 0);         // disable dynamic payloads by default (for all pipes)
    dynamic_payloads_enabled = false;
    write_register(EN_AA, 0x3F);      // enable auto-ack on all pipes
    write_register(EN_RXADDR, 3);     // only open RX pipes 0 & 1
    setPayloadSize(32);               // set static payload size to 32 (max) bytes by default
    setAddressWidth(5);               // set default address length to (max) 5 bytes

    // Set up default configuration.  Callers can always change it later.
    // This channel should be universally safe and not bleed over into adjacent
    // spectrum.
    setChannel(76);

    // Reset current status
    // Notice reset and flush is the last thing we do
    write_register(NRF_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT));


    // Flush buffers
    flush_rx();
    flush_tx();

    // Clear CONFIG register:
    //      Reflect all IRQ events on IRQ pin
    //      Enable PTX
    //      Power Up
    //      16-bit CRC (CRC required by auto-ack)
    // Do not write CE high so radio will remain in standby I mode
    // PTX should use only 22uA of power
    write_register(NRF_CONFIG, (_BV(EN_CRC) | _BV(CRCO)) );
    config_reg = read_register(NRF_CONFIG);

    powerUp();

    // if config is not set correctly then there was a bad response from module
    return config_reg == (_BV(EN_CRC) | _BV(CRCO) | _BV(PWR_UP)) ? true : false;
}

bool RF24::isValid()
{
    return _ce_pin != 0xFFFF && _cs_pin != 0xFFFF;
}

void RF24::stopListening(void)
{
    ce(LOW);

    sleep_us(txDelay);
    if (ack_payloads_enabled){
        flush_tx();
    }

    config_reg = config_reg & ~_BV(PRIM_RX);
    write_register(NRF_CONFIG, config_reg);

    uint8_t rxAddr = read_register(EN_RXADDR) | _BV(child_pipe_enable[0]);
    write_register(EN_RXADDR, rxAddr); // Enable RX on pipe0
}

void RF24::powerUp(void)
{
    // if not powered up then power up and wait for the radio to initialize
    if (!(config_reg & _BV(PWR_UP))) {
        config_reg |= _BV(PWR_UP);
        write_register(NRF_CONFIG, config_reg);

        // For nRF24L01+ to go from power down mode to TX or RX mode it must first pass through stand-by mode.
        // There must be a delay of Tpd2stby (see Table 16.) after the nRF24L01+ leaves power down mode before
        // the CEis set high. - Tpd2stby can be up to 5ms per the 1.0 datasheet
        sleep_us(RF24_POWERUP_DELAY);
    }
}

bool RF24::startWrite(const void* buf, uint8_t len, const bool multicast)
{

    // Send the payload
    write_payload(buf, len, multicast ? W_TX_PAYLOAD_NO_ACK : W_TX_PAYLOAD);
    ce(HIGH);
    sleep_us(10);
    ce(LOW);
    return !(status & _BV(TX_FULL));
}
